Commented out some cell that shouldn't run

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -4878,7 +4878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 89,
    "id": "2bb846d0",
    "metadata": {},
    "outputs": [],
@@ -4902,7 +4902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "id": "0b80bcab-d2c5-437c-a1c8-8eea208c0e29",
    "metadata": {
     "tags": []
@@ -4966,19 +4966,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "id": "8194b462",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pipeline_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/svpino/dev/ml.school/program/cohort.ipynb Cell 193\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/svpino/dev/ml.school/program/cohort.ipynb#Y363sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# | code: true\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/svpino/dev/ml.school/program/cohort.ipynb#Y363sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# | output: false\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/svpino/dev/ml.school/program/cohort.ipynb#Y363sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msagemaker\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mworkflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_step\u001b[39;00m \u001b[39mimport\u001b[39;00m ModelStep\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/svpino/dev/ml.school/program/cohort.ipynb#Y363sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m create_model_step \u001b[39m=\u001b[39m ModelStep(\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/svpino/dev/ml.school/program/cohort.ipynb#Y363sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcreate-model\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/svpino/dev/ml.school/program/cohort.ipynb#Y363sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     step_args\u001b[39m=\u001b[39mpipeline_model\u001b[39m.\u001b[39mcreate(instance_type\u001b[39m=\u001b[39mconfig[\u001b[39m\"\u001b[39m\u001b[39minstance_type\u001b[39m\u001b[39m\"\u001b[39m]),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/svpino/dev/ml.school/program/cohort.ipynb#Y363sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pipeline_model' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/svpino/dev/ml.school/.venv/lib/python3.9/site-packages/sagemaker/workflow/pipeline_context.py:297: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -5004,7 +5001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 93,
    "id": "bf6aa4f0",
    "metadata": {},
    "outputs": [],
@@ -5038,7 +5035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 724,
+   "execution_count": 94,
    "id": "1987a788-de7a-4f60-ac8d-819d9ffcdf8e",
    "metadata": {
     "tags": []
@@ -5084,7 +5081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 725,
+   "execution_count": 95,
    "id": "9aa3a284-8763-4000-a263-70314b530652",
    "metadata": {
     "tags": []
@@ -5148,7 +5145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 726,
+   "execution_count": 96,
    "id": "a773f134-ac2f-4dba-976e-9b7f0b384b6e",
    "metadata": {
     "tags": []
@@ -5208,7 +5205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 727,
+   "execution_count": 97,
    "id": "7056a009-91c0-4955-90dd-b90ef8cab149",
    "metadata": {
     "tags": []
@@ -5250,7 +5247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 728,
+   "execution_count": 98,
    "id": "bacaa9c6-22b0-48df-b138-95b6422fe834",
    "metadata": {
     "tags": []
@@ -5284,16 +5281,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 729,
+   "execution_count": 99,
    "id": "4da5e453-acd8-47a0-a39f-264d05dd93d0",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Using provided s3_resource\n",
       "Using provided s3_resource\n"
      ]
     },
@@ -5301,21 +5306,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n",
-      "INFO:sagemaker.processing:Uploaded None to s3://mlschool/session5-pipeline/code/09fea667a5ab7c37a068f22c00762d0b/sourcedir.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using provided s3_resource\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "INFO:sagemaker.processing:Uploaded None to s3://mlschool/session5-pipeline/code/998d594dff31f9c79ccb20373bc59f36/sourcedir.tar.gz\n",
       "INFO:sagemaker.processing:runproc.sh uploaded to s3://mlschool/session5-pipeline/code/2c207c809cb0e0e9a1d77e5247f961f9/runproc.sh\n",
       "WARNING:sagemaker.workflow._utils:Popping out 'CertifyForMarketplace' from the pipeline definition since it will be overridden in pipeline execution time.\n",
       "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n"
@@ -5333,7 +5324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:sagemaker.processing:Uploaded None to s3://mlschool/session5-pipeline/code/09fea667a5ab7c37a068f22c00762d0b/sourcedir.tar.gz\n",
+      "INFO:sagemaker.processing:Uploaded None to s3://mlschool/session5-pipeline/code/998d594dff31f9c79ccb20373bc59f36/sourcedir.tar.gz\n",
       "INFO:sagemaker.processing:runproc.sh uploaded to s3://mlschool/session5-pipeline/code/2c207c809cb0e0e9a1d77e5247f961f9/runproc.sh\n"
      ]
     },
@@ -5341,16 +5332,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:325223348818:pipeline/session5-pipeline',\n",
-       " 'ResponseMetadata': {'RequestId': 'e104a5af-2148-4ab4-85b3-af898d3bd315',\n",
+       " 'ResponseMetadata': {'RequestId': 'f6908b05-6627-4a3e-b7ef-98c664003703',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'e104a5af-2148-4ab4-85b3-af898d3bd315',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'f6908b05-6627-4a3e-b7ef-98c664003703',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '85',\n",
-       "   'date': 'Fri, 27 Oct 2023 14:38:52 GMT'},\n",
+       "   'date': 'Thu, 09 Nov 2023 14:46:18 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 729,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5398,23 +5389,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 100,
    "id": "10ba9909",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/session5-pipeline/execution/ifgn9itt6qcy', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x32d119d60>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/session5-pipeline/execution/4azhf91oofsk', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x111503370>)"
       ]
      },
-     "execution_count": 739,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# %%script false --no-raise-error\n",
+    "%%script false --no-raise-error\n",
     "\n",
     "#| eval: false\n",
     "#| code: true\n",
@@ -5437,7 +5428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 101,
    "id": "42daa82b",
    "metadata": {},
    "outputs": [
@@ -5499,7 +5490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 102,
    "id": "898d9626",
    "metadata": {},
    "outputs": [
@@ -5540,7 +5531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 103,
    "id": "2df52332",
    "metadata": {},
    "outputs": [
@@ -5757,7 +5748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 758,
+   "execution_count": 105,
    "id": "da145ba1-4966-4dab-8a73-281db364cbc7",
    "metadata": {
     "tags": []
@@ -6016,7 +6007,7 @@
    },
    "outputs": [],
    "source": [
-    "# %%script false --no-raise-error\n",
+    "%%script false --no-raise-error\n",
     "#| code: true\n",
     "#| output: false\n",
     "#| eval: false\n",
@@ -6052,7 +6043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 781,
+   "execution_count": 106,
    "id": "2c04fdd4-cc03-496c-a0a1-405854505c46",
    "metadata": {
     "tags": []
@@ -6062,12 +6053,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"MonitoringScheduleName\": \"penguins-data-monitoring-schedule\",\n",
-      "  \"MonitoringType\": \"DataQuality\",\n",
-      "  \"Status\": \"Failed\",\n",
-      "  \"FailureReason\": \"Job inputs had no data\"\n",
-      "}\n"
+      "There's no DataQuality Monitoring Schedule.\n"
      ]
     }
    ],
