--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -42,21 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 2,
    "id": "4b2265b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
     "\n",
@@ -100,12 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 3,
    "id": "32c4d764",
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_MODE = False"
+    "LOCAL_MODE = True"
    ]
   },
   {
@@ -118,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 4,
    "id": "3164a3af",
    "metadata": {},
    "outputs": [],
@@ -141,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 5,
    "id": "7bc40d28",
    "metadata": {},
    "outputs": [],
@@ -160,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 6,
    "id": "3b3f17e5",
    "metadata": {},
    "outputs": [],
@@ -199,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 7,
    "id": "942a01b5",
    "metadata": {},
    "outputs": [],
@@ -240,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 8,
    "id": "f1cd2f0e-446d-48a9-a008-b4f1cc593bfc",
    "metadata": {
     "tags": []
@@ -347,7 +336,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 355,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 9,
    "id": "f2107c25-e730-4e22-a1b8-5bda53e61124",
    "metadata": {
     "tags": []
@@ -563,7 +552,7 @@
        "max     6300.000000   NaN  "
       ]
      },
-     "execution_count": 356,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 10,
    "id": "1242122a-726e-4c37-a718-dd8e873d1612",
    "metadata": {
     "tags": []
@@ -640,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 11,
    "id": "cf1cf582-8831-4f83-bb17-2175afb193e8",
    "metadata": {
     "tags": []
@@ -655,7 +644,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 12,
    "id": "cc42cb08-275c-4b05-9d2b-77052da2f336",
    "metadata": {
     "tags": []
@@ -695,7 +684,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 13,
    "id": "3c57d55d-afd6-467a-a7a8-ff04132770ed",
    "metadata": {
     "tags": []
@@ -733,7 +722,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 14,
    "id": "2852c740",
    "metadata": {},
    "outputs": [
@@ -802,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 15,
    "id": "707cc972",
    "metadata": {},
    "outputs": [
@@ -850,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 16,
    "id": "3daf3ba1-d218-4ad4-b862-af679b91273f",
    "metadata": {
     "tags": []
@@ -930,7 +919,7 @@
        "body_mass_g        640316.716388  "
       ]
      },
-     "execution_count": 363,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 17,
    "id": "1d793e09-2cb9-47ff-a0e6-199a0f4fc1b3",
    "metadata": {
     "tags": []
@@ -1035,7 +1024,7 @@
        "body_mass_g           1.000000  "
       ]
      },
-     "execution_count": 364,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 18,
    "id": "1258c99d",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 19,
    "id": "45b0a87f-028d-477f-9b65-199728c0b7ee",
    "metadata": {
     "tags": []
@@ -1158,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 20,
    "id": "fb6ba7c0-1bd6-4fe5-8b7f-f6cbdfd3846c",
    "metadata": {
     "tags": []
@@ -1349,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 21,
    "id": "d1f122a4-acff-4687-91b9-bfef13567d88",
    "metadata": {
     "tags": []
@@ -1486,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 22,
    "id": "d88e9ccf",
    "metadata": {},
    "outputs": [],
@@ -1506,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 23,
    "id": "331fe373",
    "metadata": {},
    "outputs": [],
@@ -1533,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 28,
    "id": "3aa4471a",
    "metadata": {},
    "outputs": [
@@ -1576,21 +1565,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 29,
    "id": "cdbd9303",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/svpino/dev/ml.school/.venv/lib/python3.9/site-packages/sagemaker/workflow/pipeline_context.py:297: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# | code: true\n",
     "# | output: false\n",
@@ -1657,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 30,
    "id": "e140642a",
    "metadata": {
     "tags": []
@@ -1666,17 +1646,10 @@
     {
      "data": {
       "text/plain": [
-       "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:325223348818:pipeline/session1-pipeline',\n",
-       " 'ResponseMetadata': {'RequestId': 'a15cc31f-a02b-413d-a68e-0354da62a899',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'a15cc31f-a02b-413d-a68e-0354da62a899',\n",
-       "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'content-length': '85',\n",
-       "   'date': 'Thu, 09 Nov 2023 20:32:21 GMT'},\n",
-       "  'RetryAttempts': 0}}"
+       "{'PipelineArn': 'session1-pipeline'}"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1725,10 +1698,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 31,
    "id": "59d1e634",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting execution for pipeline session1-pipeline. Execution ID is b3417a61-042d-4174-84ec-7d39cd529451\n",
+      "Starting pipeline step: 'preprocess-data'\n",
+      "Pipeline step 'preprocess-data' FAILED. Failure message is: TypeError: create_processing_job() got multiple values for argument 'ProcessingJobName'\n",
+      "Pipeline execution b3417a61-042d-4174-84ec-7d39cd529451 FAILED because step 'preprocess-data' failed.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sagemaker.local.entities._LocalPipelineExecution at 0x302aa6e50>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%script false --no-raise-error\n",
     "#| eval: false\n",
