fix: lexical correction
Seems like a typo

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -95,7 +95,7 @@
    "id": "588d34c9",
    "metadata": {},
    "source": [
-    "We can run this notebook is [Local Mode](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-local-mode.html) to test the pipeline in your local environment before using SageMaker. You can run the code in Local Mode by setting the `LOCAL_MODE` constant to `True`.\n"
+    "We can run this notebook in [Local Mode](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-local-mode.html) to test the pipeline in your local environment before using SageMaker. You can run the code in Local Mode by setting the `LOCAL_MODE` constant to `True`.\n"
    ]
   },
   {
