--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Building Production Machine Learning Systems\n"
+    "# Building Production Machine Learning Systems That Don't Suck\n"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "id": "4b2265b0",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 6,
    "id": "32c4d764",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "id": "3164a3af",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "id": "7bc40d28",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 9,
    "id": "3b3f17e5",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 10,
    "id": "942a01b5",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 11,
    "id": "f1cd2f0e-446d-48a9-a008-b4f1cc593bfc",
    "metadata": {
     "tags": []
@@ -347,7 +347,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 194,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 12,
    "id": "f2107c25-e730-4e22-a1b8-5bda53e61124",
    "metadata": {
     "tags": []
@@ -563,7 +563,7 @@
        "max     6300.000000   NaN  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 13,
    "id": "1242122a-726e-4c37-a718-dd8e873d1612",
    "metadata": {
     "tags": []
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 14,
    "id": "cf1cf582-8831-4f83-bb17-2175afb193e8",
    "metadata": {
     "tags": []
@@ -655,7 +655,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
    "id": "cc42cb08-275c-4b05-9d2b-77052da2f336",
    "metadata": {
     "tags": []
@@ -695,7 +695,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 16,
    "id": "3c57d55d-afd6-467a-a7a8-ff04132770ed",
    "metadata": {
     "tags": []
@@ -733,7 +733,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 17,
    "id": "2852c740",
    "metadata": {},
    "outputs": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 18,
    "id": "707cc972",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 19,
    "id": "3daf3ba1-d218-4ad4-b862-af679b91273f",
    "metadata": {
     "tags": []
@@ -930,7 +930,7 @@
        "body_mass_g        640316.716388  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 20,
    "id": "1d793e09-2cb9-47ff-a0e6-199a0f4fc1b3",
    "metadata": {
     "tags": []
@@ -1035,7 +1035,7 @@
        "body_mass_g           1.000000  "
       ]
      },
-     "execution_count": 203,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 21,
    "id": "1258c99d",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 22,
    "id": "45b0a87f-028d-477f-9b65-199728c0b7ee",
    "metadata": {
     "tags": []
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 23,
    "id": "fb6ba7c0-1bd6-4fe5-8b7f-f6cbdfd3846c",
    "metadata": {
     "tags": []
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 24,
    "id": "d1f122a4-acff-4687-91b9-bfef13567d88",
    "metadata": {
     "tags": []
@@ -1360,7 +1360,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\n",
-      "\u001b[32m\u001b[32m\u001b[1m8 passed\u001b[0m\u001b[32m in 0.15s\u001b[0m\u001b[0m\n"
+      "\u001b[32m\u001b[32m\u001b[1m8 passed\u001b[0m\u001b[32m in 0.14s\u001b[0m\u001b[0m\n"
      ]
     }
    ],
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 25,
    "id": "d88e9ccf",
    "metadata": {},
    "outputs": [],
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 26,
    "id": "331fe373",
    "metadata": {},
    "outputs": [],
@@ -1533,18 +1533,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 27,
    "id": "3aa4471a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sagemaker.image_uris:Defaulting to only available Python version: py3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| code: true\n",
     "#| output: false\n",
@@ -1576,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 28,
    "id": "cdbd9303",
    "metadata": {
     "tags": []
@@ -1586,7 +1578,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/svpino/dev/ml.school/.venv/lib/python3.9/site-packages/sagemaker/workflow/pipeline_context.py:297: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
+      "/Users/svpino/dev/ml.school/.venv/lib/python3.9/site-packages/sagemaker/workflow/pipeline_context.py:332: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1657,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 29,
    "id": "e140642a",
    "metadata": {
     "tags": []
@@ -1669,7 +1661,7 @@
        "{'PipelineArn': 'session1-pipeline'}"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1718,12 +1710,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 30,
    "id": "59d1e634",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sagemaker.local.entities:Starting execution for pipeline session1-pipeline. Execution ID is 715b3c5a-4df9-466a-ad14-379588cff3e8\n",
+      "INFO:sagemaker.local.entities:Starting pipeline step: 'preprocess-data'\n",
+      "INFO:sagemaker.local.entities:Pipeline step 'preprocess-data' FAILED. Failure message is: TypeError: create_processing_job() got multiple values for argument 'ProcessingJobName'\n",
+      "INFO:sagemaker.local.entities:Pipeline execution 715b3c5a-4df9-466a-ad14-379588cff3e8 FAILED because step 'preprocess-data' failed.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sagemaker.local.entities._LocalPipelineExecution at 0x2cd81faf0>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%script false --no-raise-error\n",
+    "# %%script false --no-raise-error\n",
     "#| eval: false\n",
     "#| code: true\n",
     "#| output: false\n",
@@ -1779,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 31,
    "id": "d92b121d-dcb9-43e8-9ee3-3ececb583e7e",
    "metadata": {
     "tags": []
@@ -1886,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 32,
    "id": "14ea27ce-c453-4cb0-b309-dbecd732957e",
    "metadata": {
     "tags": []
@@ -1903,17 +1916,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8/8 - 0s - loss: 1.1353 - accuracy: 0.3724 - val_loss: 1.1384 - val_accuracy: 0.3529 - 192ms/epoch - 24ms/step\n",
+      "8/8 - 0s - loss: 1.2042 - accuracy: 0.5858 - val_loss: 0.9394 - val_accuracy: 0.7059 - 204ms/epoch - 25ms/step\n",
       "2/2 [==============================] - 0s 1ms/step\n",
-      "Validation accuracy: 0.35294117647058826\n",
-      "INFO:tensorflow:Assets written to: /var/folders/4c/v1q3hy1x4mb5w0wpc72zl3_w0000gp/T/tmpg9laexa2/model/001/assets\n"
+      "Validation accuracy: 0.7058823529411765\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /var/folders/4c/v1q3hy1x4mb5w0wpc72zl3_w0000gp/T/tmpg9laexa2/model/001/assets\n"
+      "INFO:tensorflow:Assets written to: /var/folders/4c/v1q3hy1x4mb5w0wpc72zl3_w0000gp/T/tmpxeoczkt2/model/001/assets\n"
      ]
     },
     {
@@ -1921,7 +1933,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m.\u001b[0m\n",
-      "\u001b[32m\u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.45s\u001b[0m\u001b[0m\n"
+      "\u001b[32m\u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.65s\u001b[0m\u001b[0m\n"
      ]
     }
    ],
